# swift-llm

./: WORKSPACE
examples/: BUILD.bazel
examples/mistral/: main.swift
examples/mistral_converter/: main.swift
examples/t5_small/: main.swift
examples/t5_xxl/: main.swift
