load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "llava",
    srcs = ["llava/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "mistral",
    srcs = ["mistral/main.swift"],
    deps = [
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "mistral_converter",
    srcs = ["mistral_converter/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)
