load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "llava",
    srcs = ["llava/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "mistral",
    srcs = ["mistral/main.swift"],
    data = [
        "mistral/tokenizer.model",
    ],
    deps = [
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "mistral_converter",
    srcs = ["mistral_converter/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "t5_small",
    srcs = ["t5_small/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "t5_xxl",
    srcs = ["t5_xxl/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)
